# pntr-cmake-example

./: README.md
FetchContent/: CMakeLists.txt
add_subdirectory/: CMakeLists.txt
find_package/: CMakeLists.txt  pntr-hello.cpp
